# NoodleBot

./: .gitignore  CMakeLists.txt  package.xml  readme.md  requirements.txt  setup.py
Arduino/MultiServoWithIntegrator/: MultiServoWithIntegrator.ino  Process_Hedgehog.ino  global.h  wifi.h
Arduino/Sweep/: Sweep.ino
Arduino/VideoDemo/: VideoDemo.ino
config/: april_tags.rviz  swimmer.urdf  swimmer_config.yaml  tag_settings.yaml  tags.yaml  usb_cam1.yaml
data/maxdiff/SwimmerEnv_v3_real2sim_H30/seed_113/: buffer_data_enjoy_full.pkl  model_10000.pt  model_12500.pt  model_15000.pt  model_17500.pt  model_20000.pt  model_22500.pt  model_2500.pt  model_25000.pt  model_5000.pt  model_7500.pt  model_final.pt  reward_data.pkl  reward_data_enjoy_full.pkl  rewards.txt
data/maxdiff/SwimmerEnv_v3_real2sim_H30/seed_13/: buffer_data_enjoy_full.pkl  config.yaml  model_10000.pt  model_12500.pt  model_15000.pt  model_17500.pt  model_20000.pt  model_22500.pt  model_2500.pt  model_25000.pt  model_5000.pt  model_7500.pt  model_final.pt  reward_data.pkl  reward_data_enjoy_full.pkl  rewards.txt
data/maxdiff/SwimmerEnv_v3_real2sim_H30/seed_213/: buffer_data_enjoy_full.pkl  model_10000.pt  model_12500.pt  model_15000.pt  model_17500.pt  model_20000.pt  model_22500.pt  model_2500.pt  model_25000.pt  model_5000.pt  model_7500.pt  model_final.pt  reward_data.pkl  reward_data_enjoy_full.pkl  rewards.txt
data/maxdiff/SwimmerEnv_v3_real2sim_H30/seed_313/: buffer_data_enjoy_full.pkl  model_10000.pt  model_12500.pt  model_15000.pt  model_17500.pt  model_20000.pt  model_22500.pt  model_2500.pt  model_25000.pt  model_5000.pt  model_7500.pt  model_final.pt  reward_data.pkl  reward_data_enjoy_full.pkl  rewards.txt
data/maxdiff/SwimmerEnv_v3_real2sim_H30/seed_413/: buffer_data_enjoy_full.pkl  model_10000.pt  model_12500.pt  model_15000.pt  model_17500.pt  model_20000.pt  model_22500.pt  model_2500.pt  model_25000.pt  model_5000.pt  model_7500.pt  model_final.pt  reward_data.pkl  reward_data_enjoy_full.pkl  rewards.txt
data/maxdiff/SwimmerEnv_v3_real2sim_H30_ss/seed_113/: model_10000.pt  (+11 more)
launch/: enjoy.launch  init_cam_n_track.launch  joint_test_gui.launch  train.launch
msg/: swimmer_command.msg  swimmer_info.msg  swimmer_reset.msg
notebooks/: figs.ipynb  plotting_utils.py
scripts/: april_tag_repeater  dummy_swimmer  enjoy  gui  joint_repeater  train
src/: hlt_planner.py  test_env.py  utils.py
src/mpc_lib/: maxdiff.py  mppi.py
src/sac_lib/: sac_orig.py
swimmer/: NoodleBot.ini  readme.md
swimmer/solidworks/: large servo bracket 2.SLDPRT  large servo bracket.SLDPRT  swimmer cap.SLDPRT
(+483 files in other folders)
