<?xml version="1.0"?>
<package format="2">
  <name>noodlebot</name>
  <version>1.0.0</version>
  <description>Sets up swimmer experiments for hardware RL benchmark</description>

  <maintainer email="apinosky@u.northwestern.edu">allison</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>rqt_plot</exec_depend>

</package>
